k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bank
  labels:
    env: dev
    participant: bank
---
apiVersion: v1
kind: Namespace
metadata:
  name: buyer
  labels:
    env: dev
    participant: buyer
---
apiVersion: v1
kind: Namespace
metadata:
  name: seller
  labels:
    env: dev
    participant: seller
